fix: wrapper swagger
